syntax = "proto3";
package api;

// Request for a certificate to be issued
message CertificateRequest {
    // Example: foo.bar.com
    string dnsName = 1;
}

// A successful response containing a issued certificate
message CertificateResponse {
    // A blob containing the cert
    string certificate = 1;
    // A blob containing the private key
    string privateKey = 2;
    // The DNS names this certificate is valid for
    repeated string names = 3;
}

// A request for ping
message PingRequest {
    string msg = 1;
}

// A response for ping
message PingResponse {
    string msg = 2;
}

message CertificateRenewalNotificationRequest {
    // A list of DNS names to monitor for renewals
    repeated string dnsNames = 1;
}

// Response for a certificate that has been renewed on the server
message RenewedCertificateEvent {
    // Example: foo.bar.com
    string dnsName = 1;
}

service CertificateIssuer {
    rpc IssueCert (CertificateRequest) returns (CertificateResponse) {
    }
    rpc Ping (PingRequest) returns (PingResponse) {
    }
    rpc OnCertificateRenewal (CertificateRenewalNotificationRequest) returns (stream RenewedCertificateEvent) {}
}
